src/snapshots/tui_term__widget__tests__vttest_08_06.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA                                         ",
        "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB                                          ",
        "CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC                                           ",
        "The right column should be staggered                                            ",
        "by one.  Push <RETURN>EEEEEEEEEEEEE                                             ",
        "FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF                                              ",
        "GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG                                               ",
        "HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH                                                ",
        "IIIIIIIIIIIIIIIIIIIIIIIIIIIIIII                                                 ",
        "JJJJJJJJJJJJJJJJJJJJJJJJJJJJJJ                                                  ",
        "KKKKKKKKKKKKKKKKKKKKKKKKKKKKK                                                   ",
        "LLLLLLLLLLLLLLLLLLLLLLLLLLLL                                                    ",
        "MMMMMMMMMMMMMMMMMMMMMMMMMMM                                                     ",
        "NNNNNNNNNNNNNNNNNNNNNNNNNN                                                      ",
        "OOOOOOOOOOOOOOOOOOOOOOOOO                                                       ",
        "PPPPPPPPPPPPPPPPPPPPPPPP                                                        ",
        "QQQQQQQQQQQQQQQQQQQQQQQ                                                         ",
        "RRRRRRRRRRRRRRRRRRRRRR                                                          ",
        "SSSSSSSSSSSSSSSSSSSSS                                                           ",
        "TTTTTTTTTTTTTTTTTTTT                                                            ",
        "UUUUUUUUUUUUUUUUUUU                                                             ",
        "VVVVVVVVVVVVVVVVVV                                                              ",
        "WWWWWWWWWWWWWWWWW                                                               ",
        "XXXXXXXXXXXXXXXX                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 23, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
